# Tetris

./: CMakeLists.txt  README.md  Tetris.sln  main.cpp
Debug/: Tetris.ilk
Release/: Tetris.iobj  Tetris.ipdb
Tetris/: Tetris.aps  Tetris.vcxproj  Tetris.vcxproj.filters  main.cpp
Tetris/Debug/: vc142.idb
Tetris/Debug/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tetris/Release/: Tetris.res
Tetris/Release/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  Tetris.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog
